vehicle/tests/golden/error/typing/indexOutOfBoundsUnknown/indexOutOfBoundsUnknown.vcl
outOfBounds : Tensor Rat [n] -> Rat
outOfBounds x = x ! 1
